--- a/templates/editfile.html
+++ b/templates/editfile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bridge File Repository: Edit file</title>
+    <title>Lev File Repository: Edit file</title>
     <link rel="stylesheet" href="../static/lib/bootstrap.min.css">
     <link rel="stylesheet" href="../static/styles/main.css" />
     <link rel="stylesheet" type="text/css" href="../static/lib/daterangepicker.css"/>
