--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bridge File Repository: Index</title>
+    <title>Lev File Repository: Index</title>
     <link rel="stylesheet" href="../static/lib/bootstrap.min.css">
     <link rel="stylesheet" href="../static/styles/main.css" />
     <script type="text/javascript" src="../static/lib/react.min.js"></script>
