--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bridge File Repository: Login</title>
+    <title>Lev File Repository: Login</title>
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="../static/lib/bootstrap.min.css">
     <link rel="stylesheet" href="../static/styles/main.css" />
@@ -15,7 +15,7 @@
 <div id="header"></div>
 
 <div  class="center bg">
-    <div style="margin: 20px 0" class="large">Welcome to the Bridge File Repository</div>
+    <div style="margin: 20px 0" class="large">Welcome to the Lev File Repository</div>
     <div><img src="../static/images/logo2.png"></div>
     <div id="content"></div>
 </div>
